# WindowsArrowKeys

./: .clang-format  .gitignore  ALL_BUILD.vcxproj  CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  INSTALL.vcxproj  INSTALL.vcxproj.filters  LICENSE.txt  Main.cpp  Menu.cpp  Menu.hpp  MyTypes.hpp  README.md  WindowsArrowKeys.sln  WindowsKeys.sln  WindowsKeys.vcxproj  WindowsKeys.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  cpp.hint  old._clang-format
Binaries/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  WindowsKeys.sln  WindowsKeys.vcxproj  WindowsKeys.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
doxygen/: Doxyfile
include/: Interface.hpp  Menu.hpp  MyTypes.hpp  old_menuclass.hpp
src/: Interface.cpp  Main.cpp  Menu.cpp  MyTypes.cpp
